--- a/app.json
+++ b/app.json
@@ -29,7 +29,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
     },
@@ -40,6 +42,12 @@
       "eas": {
         "projectId": "799bdf76-34bb-4237-a69c-bd158fecd619"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/799bdf76-34bb-4237-a69c-bd158fecd619"
     }
   }
 }
