--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/config": "8.1.1",
-    "@expo/metro-config": "0.10.0",
-    "@expo/vector-icons": "14.0.2",
+    "@expo/config": "~9.0.0",
+    "@expo/metro-config": "~0.18.11",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.18",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.18",
+    "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
